--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "http-server": "^0.9.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   },
